[package]
name = "upkit_common_x509"
version = "0.0.0"
edition = "2021"
description = "UPKIT common X509 utilities"
license = "Apache-2.0 WITH AdditionRef-FWM-Exception-1.0.0"
publish = false

#[[bench]]
#name = "all"
#harness = false

#[package.metadata.docs.rs]
#all-features = true

[dependencies]

tyst = { workspace = true, features = [] }

# Logging and tracing
log = { workspace = true, features = [] }
env_logger = { workspace = true, features = [] }

# Async and concurrency
crossbeam-skiplist = { version = "0.1", default-features = true }

# https://docs.rs/rasn/latest/rasn/
rasn = { workspace = true, features = []  }
rasn-pkix = { workspace = true, features = []  }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
num-bigint = { version = "0.4", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc", "now"] }

# puny code
idna = { version = "1.0", default-features = true, features = [] }

serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
serde_with = { workspace = true, features = [] }

# Converting simple enums to String
serde_variant = { version = "0.1", features = [] }
strum = { version = "0.27", default-features = false, features = ["derive"] }

# Rust nightly benchmark port to stable
# This should be possible to move to dev-deps
#bencher = { version = "0.1", default-features = true, features = [] }

#[dev-dependencies]

#[features]
